Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26142

qt3d "Shapes" demo: cube and teapot are misplaced

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0
    • 5.7.0
    • Qt3D
    • None
    • desktop Linux

    Description

      In qt3d "Shapes" demo
      cube and teapot are drawn in lower left corner
      instead of their proper positions on the grid.

      Attachments

        For Gerrit Dashboard: QTBUG-26142
        # Subject Branch Project Status CR V

        Activity

          People

            sergey.dubitskiy Sergey (closed Nokia identity) (Inactive)
            sergey.dubitskiy Sergey (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes