Qt3d "Shapes" demo: cube and teapot are misplaced.

Task-number: QTBUG-26142
Change-Id: I63bcca2f67005e6cc675ec8c7f15c05870be9046
Reviewed-by: Danny Pope <daniel.pope@nokia.com>